# kanban_rs

./: Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
crates/cmd/rest/: Cargo.toml
crates/cmd/rest/examples/: quick_dev.rs
crates/cmd/rest/src/: error.rs  log.rs  mw_auth.rs  mw_res_map.rs  routes_health.rs
crates/shared/ctx/src/: lib.rs
crates/tickets/: Cargo.toml
crates/tickets/src/: error.rs  lib.rs
crates/tickets/src/adapters/ticket_store/: in_memory.rs
crates/tickets/src/domain/: mod.rs
crates/tickets/src/ports/: mod.rs
crates/tickets/src/service/: mod.rs
examples/: quick_dev.rs
rest/: Cargo.toml
rest/examples/: quick_dev.rs
rest/src/: extract.rs  log.rs  main.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
rest/src/log/: mod.rs
rest/src/web/: extract.rs  mod.rs  mw_res_map.rs  routes_tickets.rs
shared/trace/: Cargo.toml
shared/trace/src/: lib.rs  open_telemetry.rs
src/: error.rs  log.rs  main.rs  model.rs
src/adapters/: mod.rs
src/adapters/ticket_store/: in_memory.rs
src/core/: mod.rs  ports.rs
src/core/domain/: mod.rs
src/core/ports/: mod.rs
src/core/services/: mod.rs
src/log/: mod.rs
src/model/: mod.rs
src/trace/: open_telemetry.rs
src/web/: mod.rs  mw_auth.rs  mw_res_map.rs  routes_health.rs  routes_login.rs  routes_tickets.rs  server.rs
tickets/: Cargo.toml
tickets/src/: error.rs  lib.rs
tickets/src/adapters/ticket_store/: in_memory.rs
tickets/src/core/ports/: mod.rs
tickets/src/core/services/: mod.rs
tickets/src/domain/: mod.rs
web/: Cargo.toml
web/examples/: quick_dev.rs
web/src/: main.rs
web/src/adapters/ticket_store/: in_memory.rs
web/src/log/: mod.rs
web/src/web/: extract.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_tickets.rs
