[package]
name = "kanban_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
lazy-regex = "3.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10.0"

[dev-dependencies]
httpc-test = "0.1.9"
