[package]
name = "tickets"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.1"
ctx = { version = "0.1.0", path = "../shared/ctx" }
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
